[package]
name = "packetparse"
version = "0.1.0"
authors = ["tekjar <raviteja@bytebeam.io>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "0.5"
byteorder = "1"

[dev-dependencies]
prost = "0.6"
pprof = { version = "0.3", features = ["flamegraph", "protobuf"] }
tempfile = "3"
pretty_assertions = "0.6"
rand = "0.7"
mimalloc = { version = "*", default-features = false }

[profile.release]
debug = true

