[package]
name = "tcpackserver"
version = "0.1.0"
authors = ["tekjar <raviteja@bytebeam.io>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
common = { path = "../common", version = "0.1" }
tokio = { version = "0.2", features = ["full"] }
tokio-util = { version = "0.3", features = ["codec"] }
argh = "0.1"
rand = "0.7"