[package]
name = "vectored"
version = "0.1.0"
authors = ["tekjar <raviteja@bytebeam.io>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
default = []

benchmark = []

[dependencies]
argh = "0.1"
thiserror = "1"
bytes = "0.5"
byteorder = "1"
futures-util = { version = "0.3", features = ["io", "sink"] }
futures_codec = "0.4"
tokio = { version = "=0.2.20", features = ["full"] }
tokio-util = { version = "0.3", features = ["codec"] }
chunked-bytes = "0.1"
smol = "0.1"

[dev-dependencies]
prost = "0.6"
pprof = { version = "0.3", features = ["flamegraph", "protobuf"] }
pretty_assertions = "0.6"
criterion = "0.3"

[[bench]]
name = "benchmark"
harness = false

#[profile.release]
#debug = true
