[package]
name = "quicackserver"
version = "0.1.0"
authors = ["tekjar <raviteja@bytebeam.io>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
common = { path = "../../common", version = "0.1" }
quinn = "0.6"
tokio = { version = "0.2", features = ["full"] }
tokio-util = { version = "0.3", features = ["codec"] }
futures-util = { version = "0.3", features = ["sink"] }
futures_codec = "0.4"
argh = "0.1"
rand = "0.7"
rcgen = "0.8"
