[package]
name = "smolackserver"
version = "0.1.0"
authors = ["tekjar <raviteja@bytebeam.io>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
common = { path = "../../common", version = "0.1" }
futures-util = { version = "0.3", features = ["sink"] }
futures_codec = "0.4"
tokio = { version = "0.2", features = ["macros"] }
smol = { path = "../../../smol" }
argh = "0.1"
rand = "0.7"
